8327054: DiagnosticCommand Compiler.perfmap does not log on output()

Reviewed-by: lmesnik, stuefe, kevinw, cjplummer